--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <!-- Example row of columns -->
       <div class="row lead" style="text-align: center;">
           <div>
-              <p> Произнесите фразу: </p>
+              <p> Произнесите фразу (громко и четко): </p>
               <b><p id="testText">yes we can</p></b>
           </div>
           <hr>
